# exercises

./: README.MD  pyproject.toml
ex/: solution.py
exercises/: file_6.faux  solution.py  test_files.py
