[tool.poetry]
name = "exercises"
version = "0.1.0"
description = "Codilify Exercise Resolution"
authors = ["Andre Guerrra <andre.catarino.guerra@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
hypothesis = "^4.7"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
